--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,15 +10,16 @@ html, body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  /* margin: 0; */
-  /* padding: 0; */
-  /* box-sizing: border-box; */
   font-family: "Outfit", serif;
+}
+
+::selection {
+  background-color: #ffcc00;
+  color: #000;
 }
 
 .app {
   width: 100vw;
-  height: 100vh;
   display: flex;
   background-color: #495057;
   color: white;
@@ -28,11 +29,9 @@ html, body {
 }
 
 .page {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 4rem 2rem;
   text-align: center;
+  color: #fff;
+  height: 100vh;
+  overflow-y: auto;
 }
