--- a/frontend/src/components/ContactPage/contactPage.css
+++ b/frontend/src/components/ContactPage/contactPage.css
@@ -2,10 +2,12 @@
   padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh; /* Zmieniono z height na min-height */
   display: flex;
+  flex-direction: column; /* Dodano flex-direction */
   align-items: center;
   justify-content: center;
+  overflow-y: auto; /* Dodano overflow-y */
 }
 
 .contactPageContainer {
@@ -172,6 +174,10 @@
 
   .contactPageContainerLeftOne {
     font-size: 12px;
+  }
+
+  .contactPageContainer {
+    margin-bottom: 100px;
   }
 
   .contactInfo {
