--- a/frontend/src/components/ProjectsPage/projectsPage.css
+++ b/frontend/src/components/ProjectsPage/projectsPage.css
@@ -216,6 +216,11 @@
     width: 100%;
     padding: 0.5rem 1rem;
   }
+
+  .projectsContainer {
+    margin-bottom: 200px;
+    /* margin-top: 0; */
+  }
 }
 
 @media (max-width: 480px) {
