--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -13,6 +13,7 @@
     transition: transform 0.3s ease-in-out;
     top: 0;
     left: 0;
+    text-decoration: none;
 }
 
 .navLinkText {
@@ -20,6 +21,7 @@
     font-size: 24px;
     font-weight: 600;
     letter-spacing: 1.8px;
+    color: #fff;
 }
 
 .navLink {
@@ -38,46 +40,50 @@
 .navItemOne {
     background-color: #343A40;
     height: 100%;
-    width: 70px;
+    width: 3vw;
 }
 
 .navItemTwo {
     background-color: #343A40;
     height: 100%;
-    width: 70px;
+    width: 3vw;
 }
 
 .navItemThree {
     background-color: #343A40;
     height: 100%;
-    width: 70px;
+    width: 3vw;
 }
 
 .navbar.main-active .navItemTwo {
-    transform: translateX(calc(100vw - 214px));
-    border-right: 2px solid #fff;
-    border-left: 2px solid #fff;
+    transform: translateX(calc(100vw - 9vw));
+    border-right: 0.2vw solid #fff;
+    border-left: 0.2vw solid #fff;
 }
 
 .navbar.main-active .navItemThree {
-    transform: translateX(calc(100vw - 214px));
+    transform: translateX(calc(100vw - 9vw));
 }
 
 .navbar.projects-active .navItemThree {
-    transform: translateX(calc(100vw - 214px));
-    border-left: 2px solid #fff;
+    transform: translateX(calc(100vw - 9vw));
+    border-left: 0.2vw solid #fff;
 }
 
 .navbar.projects-active .navItemTwo {
-    border-left: 2px solid #fff;
+    border-left: 0.2vw solid #fff;
 }
 
 .navbar.contact-active .navItemThree {
-    border-left: 2px solid #fff;
+    border-left: 0.2vw solid #fff;
 }
 
 .navbar.contact-active .navItemOne {
-    border-right: 2px solid #fff;
+    border-right: 0.2vw solid #fff;
+}
+
+.navItem.active .navLinkText {
+    color: #ffa500;
 }
 
 /* RESPONSYWNOŚĆ */
@@ -87,18 +93,21 @@
         align-items: flex-start;
         justify-content: center;
         width: 100%;
+        height: auto;
+        background-color: #343A40;
     }
 
     .navItem {
         width: 100%;
-        justify-content: flex-start;
-        padding: 10px 20px;
+        justify-content: center;
+        padding: 1vh 0;
+        height: 3vh;
     }
 
     .navLinkText {
         margin-top: 0;
-        font-size: 18px;
-        letter-spacing: 1.2px;
+        font-size: 1.8vh;
+        letter-spacing: 0.12vw;
     }
 
     .navLink {
@@ -110,7 +119,7 @@
     .navItemTwo,
     .navItemThree {
         width: 100%;
-        height: auto;
+        height: 3vh;
     }
 
     .navbar.main-active .navItemTwo,
