--- a/frontend/src/components/Navbar/navbar.css
+++ b/frontend/src/components/Navbar/navbar.css
@@ -101,7 +101,7 @@
         width: 100%;
         justify-content: center;
         padding: 1vh 0;
-        height: 3vh;
+        /* height: 3vh; */
     }
 
     .navLinkText {
@@ -119,7 +119,7 @@
     .navItemTwo,
     .navItemThree {
         width: 100%;
-        height: 3vh;
+        /* height: 3vh; */
     }
 
     .navbar.main-active .navItemTwo,
