--- a/frontend/src/components/ProjectsPage/projectsPage.css
+++ b/frontend/src/components/ProjectsPage/projectsPage.css
@@ -1,17 +1,17 @@
 .page {
-  padding: 4rem 2rem;
+  padding: 2rem 1rem; /* Zmniejszono padding */
   text-align: center;
   color: #fff;
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5rem;
-  margin-bottom: 4500px;
+  margin-top: 0; /* Usunięto margines górny */
+  margin-bottom: 0; /* Usunięto margines dolny */
 }
 
 .projectsPage {
-  margin-bottom: 4050px;
+  margin-bottom: 0; /* Usunięto margines dolny */
 }
 
 .title {
@@ -33,10 +33,10 @@
   display: flex;
   justify-content: center;
   gap: 2rem;
-  margin-top: 6rem;
+  margin-top: 2rem; /* Zmniejszono margines górny */
   flex-wrap: wrap;
   flex-direction: column;
-  margin-bottom: 6rem;
+  margin-bottom: 2rem; /* Zmniejszono margines dolny */
 }
 
 .projectCard {
@@ -62,7 +62,6 @@
   transition: transform 0.3s ease-in-out;
   flex-shrink: 0;
   width: 400px;
-  /* border: 5px solid lightcyan; */
   height: auto;
 }
 
@@ -169,10 +168,9 @@
     width: 100%;
     margin-left: 0;
     padding: 1rem;
-  } */
+  }
 }
 
-/* RESPONSYWNOŚĆ */
 @media (max-width: 1024px) {
   .projectCard {
     width: 90%;
@@ -218,8 +216,7 @@
   }
 
   .projectsContainer {
-    margin-bottom: 200px;
-    /* margin-top: 0; */
+    margin-bottom: 2rem; /* Zmniejszono margines dolny */
   }
 }
 
