--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 * {
   margin: 0;
@@ -6,7 +6,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -19,13 +20,13 @@ html, body {
 }
 
 .app {
-  width: 100vw;
   display: flex;
   background-color: #495057;
   color: white;
   left: 0;
   top: 0;
   border: 2px solid #fff;
+  overflow: hidden;
 }
 
 .page {
@@ -34,4 +35,10 @@ html, body {
   color: #fff;
   height: 100vh;
   overflow-y: auto;
+}
+
+/* Ukrycie pasków przewijania w przeglądarkach opartych na WebKit */
+.page::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
