Technology elements update'

--- a/frontend/src/components/MainPage/mainPage.css
+++ b/frontend/src/components/MainPage/mainPage.css
@@ -203,7 +203,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 15px;
-  width: 100%;
+  width: 80%;
   max-width: 1200px;
   margin-top: 20px;
   margin-bottom: 90px;
@@ -243,6 +243,10 @@
   }
 
   .mainPageTechnologiesAndTools {
+    width: 100%;
+  }
+
+  .mainPageTechnologiesAndToolsEle {
     width: 100%;
   }
 
