--- a/frontend/src/components/MainPage/mainPage.css
+++ b/frontend/src/components/MainPage/mainPage.css
@@ -60,9 +60,10 @@
 }
 
 .mainPageHText {
-  font-size: 2.5em;
+  font-size: 2.9em;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .blinkingCursor {
@@ -211,7 +212,7 @@
 
 @media (max-width: 1024px) {
   .mainPageHText {
-    font-size: 2em;
+    font-size: 2.7em;
   }
 
   .mainPageButtonsContainer {
@@ -235,7 +236,7 @@
   }
 
   .rainbowText {
-    font-size: 1.5em;
+    font-size: 1.9em;
   }
 
   .mainPageHeaderContainer {
@@ -257,11 +258,11 @@
 
 @media (max-width: 480px) {
   .mainPageHText {
-    font-size: 1.5em;
+    font-size: 2.3em;
   }
 
   .rainbowText {
-    font-size: 1.2em;
+    font-size: 1.9em;
   }
 
   .mainPageButtonsContainerBtn {
@@ -275,5 +276,9 @@
 
   .mainPageTechnologiesAndToolsContainerText {
     font-size: 14px;
+  }
+
+  .mainPageTechnologiesAndTools {
+    margin-bottom: 180px;
   }
 }
